# goa

./: GOA.hs  README  dot-ghci  goa.cabal
fcgi/: README  bot.cabal  bot.hs  lambdaweb-ajax.js  lambdaweb-style.css  lambdaweb.html
